fix top area shrinking too much

--- a/beats.css
+++ b/beats.css
@@ -66,7 +66,7 @@ html, body {
   display: flex;
   flex: 1;
   max-height: 50px;
-  min-height: 30px;
+  min-height: 50px;
   position: relative;
   vertical-align: middle;
   width: 100%;
